household ic post added; slogan color changed to white;

--- a/_sass/theme/_content.scss
+++ b/_sass/theme/_content.scss
@@ -39,7 +39,8 @@
             }
 
             p {
-                color: _palette($p, fg);
+                //color: _palette($p, fg);
+                color: _palette($p, fg-bold);
             }
         }
     }
