--- a/_sass/_functions.scss
+++ b/_sass/_functions.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 /// Gets a duration value.
 /// @param {string} $keys Key(s).
 /// @return {string} Value.
@@ -42,5 +44,5 @@
 
 // calc value
 @function _divide($first, $second) {
-    @return $first / $second;
+    @return math.div($first, $second);
 }
