--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -5,7 +5,7 @@
     font-weight: 400;
     src: local('Open Sans'), local('OpenSans'), url('https://fonts.gstatic.com/s/opensans/v13/K88pR3goAWT7BTt32Z01mxJtnKITppOI_IvcXXDNrsc.woff2') format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic
@@ -15,7 +15,7 @@
     font-weight: 400;
     src: local('Open Sans'), local('OpenSans'), url('https://fonts.gstatic.com/s/opensans/v13/RjgO7rYTmqiVp7vzi-Q5URJtnKITppOI_IvcXXDNrsc.woff2') format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin-ext
@@ -25,7 +25,7 @@
     font-weight: 400;
     src: local('Open Sans'), local('OpenSans'), url('https://fonts.gstatic.com/s/opensans/v13/u-WUoqrET9fUeobQW7jkRRJtnKITppOI_IvcXXDNrsc.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin
@@ -35,7 +35,7 @@
     font-weight: 400;
     src: local('Open Sans'), local('OpenSans'), url('https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic-ext
@@ -45,7 +45,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url('https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSq-j2U0lmluP9RWlSytm3ho.woff2') format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic
@@ -55,7 +55,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url('https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSpX5f-9o1vgP2EXwfjgl7AY.woff2') format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin-ext
@@ -65,7 +65,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url('https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSj0LW-43aMEzIO6XUTLjad8.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin
@@ -75,7 +75,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url('https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSugdm0LZdjqr5-oayXSOefg.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic-ext
@@ -85,7 +85,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url('https://fonts.gstatic.com/s/opensans/v13/EInbV5DfGHOiMmvb1Xr-hq-j2U0lmluP9RWlSytm3ho.woff2') format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic
@@ -95,7 +95,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url('https://fonts.gstatic.com/s/opensans/v13/EInbV5DfGHOiMmvb1Xr-hpX5f-9o1vgP2EXwfjgl7AY.woff2') format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin-ext
@@ -105,7 +105,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url('https://fonts.gstatic.com/s/opensans/v13/EInbV5DfGHOiMmvb1Xr-hj0LW-43aMEzIO6XUTLjad8.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin
@@ -115,7 +115,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url('https://fonts.gstatic.com/s/opensans/v13/EInbV5DfGHOiMmvb1Xr-hugdm0LZdjqr5-oayXSOefg.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic-ext
@@ -125,7 +125,7 @@
     font-weight: 400;
     src: local('Open Sans Italic'), local('OpenSans-Italic'), url('https://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBjTOQ_MqJVwkKsUn0wKzc2I.woff2') format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-    font-display: fallback;
+    font-display: swap;
 }
 // cyrillic
 @font-face {
@@ -134,7 +134,7 @@
     font-weight: 400;
     src: local('Open Sans Italic'), local('OpenSans-Italic'), url('https://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBjUj_cnvWIuuBMVgbX098Mw.woff2') format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin-ext
@@ -144,7 +144,7 @@
     font-weight: 400;
     src: local('Open Sans Italic'), local('OpenSans-Italic'), url('https://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBiYE0-AqJ3nfInTTiDXDjU4.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin
@@ -154,7 +154,7 @@
     font-weight: 400;
     src: local('Open Sans Italic'), local('OpenSans-Italic'), url('https://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBo4P5ICox8Kq3LLUNMylGO4.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic-ext
@@ -164,7 +164,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxmgpAmOCqD37_tyH_8Ri5MM.woff2') format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic
@@ -174,7 +174,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxsPNMTLbnS9uQzHQlYieHUU.woff2') format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin-ext
@@ -184,7 +184,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxnywqdtBbUHn3VPgzuFrCy8.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin
@@ -194,7 +194,7 @@
     font-weight: 600;
     src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxl2umOyRU7PgRiv8DXcgJjk.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    font-display: fallback;
+    font-display: swap;
 }
 // cyrillic-ext
 @font-face {
@@ -203,7 +203,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxiU8QAtQT9M0M1_mbVWrUPc.woff2') format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // cyrillic
@@ -213,7 +213,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxkNaUOL0oYRolx8sebiIY9k.woff2') format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin-ext
@@ -223,7 +223,7 @@
     font-weight: 800;
     src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxowYyzpnB4tyYboSwKGmD2g.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-display: fallback;
+    font-display: swap;
 }
 
 // latin
@@ -233,12 +233,12 @@
     font-weight: 800;
     src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url('https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxnibbpXgLHK_uTT48UMyjSM.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    font-display: fallback;
+    font-display: swap;
 }
 
 @font-face {
     font-family: 'jaapokki-subtract';
     src: url('../fonts/jaapokkisubtract-regular.ttf'),
     url('../fonts/jaapokkisubtract-regular.eot'); // IE
-    font-display: fallback;
+    font-display: swap;
 }
