learn more text padding and margin updated;

--- a/_sass/theme/_banner.scss
+++ b/_sass/theme/_banner.scss
@@ -68,10 +68,11 @@ $empty : '';
         height: 8.5em;
         left: 50%;
         letter-spacing: _size(letter-spacing-alt);
-        margin-left: -8.5em;
+        margin-left: -7.8em;
         opacity: 1;
         outline: 0;
-        padding-left: _size(letter-spacing-alt);
+        //padding-left: _size(letter-spacing-alt);
+        padding-left: 0;
         position: absolute;
         text-align: center;
         text-transform: uppercase;
