--- a/_sass/theme/_banner.scss
+++ b/_sass/theme/_banner.scss
@@ -68,12 +68,12 @@ $empty : '';
         height: 8.5em;
         left: 50%;
         letter-spacing: _size(letter-spacing-alt);
-        margin-left: -7.8em;
+        margin: 0 auto;
         opacity: 1;
         outline: 0;
         //padding-left: _size(letter-spacing-alt);
-        padding-left: 0;
-        position: absolute;
+        //padding-left: 0;
+        //position: absolute;
         text-align: center;
         text-transform: uppercase;
         width: 16em;
