household post updated; banner scss updated;

--- a/_sass/theme/_banner.scss
+++ b/_sass/theme/_banner.scss
@@ -62,11 +62,11 @@ $empty : '';
         @include vendor('transform', 'translateY(0)');
         @include icon-after(_fa-icon(chevron-down));
         border: 0;
-        bottom: 0;
+        //bottom: 0;
         color: inherit;
         font-size: .8em;
         height: 8.5em;
-        left: 50%;
+        //left: 50%;
         letter-spacing: _size(letter-spacing-alt);
         margin: 0 auto;
         opacity: 1;
