--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     {% else %}
     <meta name="keywords" content="{{ site.keywords | downcase }}">
     {% endif %}
-    <!--[if lte IE 8]><script src="{{ "js/ie/html5shiv.js" | prepend: site.url_dir }}"></script><![endif]-->
+    <!--[if lte IE 8]><script src="{{ "js/ie/html5shiv.min.js" | prepend: site.url_dir }}"></script><![endif]-->
     {% if page.url contains '.html' %}
     <link rel="alternate" href="{{ page.url | prepend: site.url_dir | replace: '//','/' | prepend: site.url }}">
     {% else %}
@@ -43,7 +43,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','{{ site.url_dir }}js/analytics.min.js','ga');
 
     ga('create', '{{ site.google_analytics_id }}', 'auto');
     ga('send', 'pageview');
