--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
-    <meta charset="{{ site.encoding }}" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="{{ site.encoding }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ site.title | prepend: ' | ' | prepend: page.title | truncate: 60 | escape }}{% else %}{{ site.title | truncate: 60 | escape }}{% endif %}</title>
     <meta name="description" content="{% if page.description %}{{ page.description | strip_newlines | truncate: 160 | escape }}{% else %}{{ site.description | strip_newlines | truncate: 160 | escape }}{% endif %}">
