--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,13 +1,13 @@
 <noscript id="deferred-styles">
     <link rel="stylesheet" type="text/css" href="{{ 'css/stylesheet.css' | prepend: site.url_dir | append: print_file_version }}">
 </noscript>
-<script type="text/javascript">
+<script>
 {% include js/loadcss.js %}
 </script>
 {% if page.url contains 'contact' %}
-<script async src="{{ 'js/scripts.contact.js' | prepend: site.url_dir }}" type="text/javascript"></script>
+<script async src="{{ 'js/scripts.contact.js' | prepend: site.url_dir }}"></script>
 {% else %}
-<script async src="{{ 'js/scripts.js' | prepend: site.url_dir }}" type="text/javascript"></script>
+<script async src="{{ 'js/scripts.js' | prepend: site.url_dir }}"></script>
 {% endif %}
 <!--[if lte IE 8]>
 <script src="{{ "js/ie/respond.min.js' | prepend: site.url_dir }}" type="text/javascript"></script>
