--- a/_sass/theme/_content.scss
+++ b/_sass/theme/_content.scss
@@ -34,7 +34,12 @@
         }
 
         &.major {
-            h2, h3, h4, h5, h6 {
+
+            h2 {
+                border-color: _palette($p, fg-bold);
+            }
+
+            h3, h4, h5, h6 {
                 border-color: _palette($p, border);
             }
 
