--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -3,8 +3,8 @@ $imgurl: '{{ site.url_dir }}img';
 @import 'reset'       ;
 @import 'vars'        ;
 @import 'functions'   ;
-//@import 'mixins'      ;
+@import 'mixins'      ;
 @import 'theme/layout';
-@import 'theme/banner';
+//@import 'theme/banner';
 @import 'theme/header';
 @import 'theme/menu'  ;
