--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -1,10 +1,10 @@
 $imgurl: '{{ site.url_dir }}img';
 
 @import 'reset'       ;
-@import 'vars'        ;
-@import 'functions'   ;
-@import 'mixins'      ;
+//@import 'vars'        ;
+//@import 'functions'   ;
+//@import 'mixins'      ;
 @import 'theme/layout';
-//@import 'theme/banner';
+@import 'theme/banner';
 @import 'theme/header';
 @import 'theme/menu'  ;
