added footer go to top arrow;

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,8 @@
+<div class="go_to_top">
+    <a href="https://github.com/insidious-src" class="icon fa-chevron-up">
+        <span class="label">Go To Top</span>
+    </a>
+</div>
 <footer id="footer" itemscope itemtype="https://schema.org/Person">
     <ul class="icons">
         {% for service in site.social %}
