--- a/_sass/theme/_footer.scss
+++ b/_sass/theme/_footer.scss
@@ -1,5 +1,23 @@
 /* Footer */
 
+.go_to_top {
+    margin-left : auto;
+    margin-right: auto;
+    content: '';
+    height: 0;
+    width: 0;
+    border-bottom: 90px solid darken(_palette(footer-bg), 8);
+    border-top: 0px solid transparent;
+    border-right: 105px solid transparent;
+    border-left: 105px solid transparent;
+
+    a {
+        top: 0.8em;
+        left: -0.5em;
+        font-size: 50px;
+    }
+}
+
 #footer {
     @include padding(4.5em, 0);
     background-color: darken(_palette(footer-bg), 8);
