--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="go_to_top">
-    <a href="https://github.com/insidious-src" class="icon fa-chevron-up">
+    <a href="#" class="icon fa-chevron-up">
         <span class="label">Go To Top</span>
     </a>
 </div>
