fixed banner and footer scss bugs;

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="go_to_top">
-    <a href="#" class="icon fa-chevron-up">
+    <a href="#one" class="scrolly icon fa-chevron-up">
         <span class="label">Go To Top</span>
     </a>
 </div>
