--- a/_sass/theme/_footer.scss
+++ b/_sass/theme/_footer.scss
@@ -1,6 +1,9 @@
 /* Footer */
 
 .go_to_top {
+    //display: flex;
+    //@include vendor('flex-direction', 'column');
+    //@include vendor('justify-content', 'center');
     margin-left : auto;
     margin-right: auto;
     content: '';
@@ -10,8 +13,10 @@
     border-top: 0px solid transparent;
     border-right: 100px solid transparent;
     border-left: 100px solid transparent;
+    text-align: center;
 
     a {
+        text-align: center;
         top: 0.8em;
         left: -0.52em;
         font-size: 50px;
