--- a/_sass/theme/_banner.scss
+++ b/_sass/theme/_banner.scss
@@ -3,7 +3,7 @@ $empty : '';
 // Banner
 
 #page-wrapper > #banner {
-    @include vendor('display', 'flex');
+    display: flex;
     @include vendor('flex-direction', 'column');
     @include vendor('justify-content', 'center');
     cursor: default;
@@ -29,7 +29,10 @@ $empty : '';
             @include vendor('transition', 'width .85s ease');
             @include vendor('transition-delay', '.25s');
             background: _palette(fg-bold);
-            content: $empty;
+            //@include vendor('border-image', 'linear-gradient(to right, transparent, rgb(128, 140, 176), transparent) 1');
+            //@include vendor('border-image', 'linear-gradient(to right, transparent, rgb(255, 255, 255), transparent) 1');
+            //border-bottom: 2px solid;
+            content: '';
             display: block;
             height: 2px;
             position: absolute;
