--- a/_sass/theme/_content.scss
+++ b/_sass/theme/_content.scss
@@ -3,7 +3,7 @@
 @mixin wrapper($p) {
     background-color: _palette($p, bg);
     color: _palette($p, fg);
-    padding: 3.3em 0 0.6em 0;
+    padding: 2.5em 0 0 0;
 
     // Basic
 
