--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,9 @@
                     {% if page.layout == 'home_layout' %}
                     <h5>Jump To</h5>
                     <ul id="jump_menu_ul" class="conduit-border">
-                        <li><a href="#two">Lastest Projects</a></li>
-                        <li><a href="#three">Specialties</a></li>
-                        <li><a href="#cta">Freelance Status</a></li>
+                        <li><a href="#two" class="scrolly">Lastest Projects</a></li>
+                        <li><a href="#three" class="scrolly">Specialties</a></li>
+                        <li><a href="#cta" class="scrolly">Freelance Status</a></li>
                     </ul>
                     {% endif %}
                 </div>
