--- a/_sass/theme/_content.scss
+++ b/_sass/theme/_content.scss
@@ -3,7 +3,7 @@
 @mixin wrapper($p) {
     background-color: _palette($p, bg);
     color: _palette($p, fg);
-    padding: 2.5em 0 0 0;
+    padding: 2.5em 2em 2.5em 2em;
 
     // Basic
 
@@ -251,7 +251,6 @@
 }
 
 .wrapper {
-    @include padding(3.5em, 0);
     overflow-x: hidden;
 
     > .inner {
@@ -300,10 +299,10 @@
     }
 
     @include breakpoint(medium) {
-        @include padding(4em, 3em);
+        padding: 4em, 3em;
     }
 
     @include breakpoint(small) {
-        @include padding(3em, 2em);
+        padding: 3em, 2em;
     }
 }
