--- a/_sass/theme/_footer.scss
+++ b/_sass/theme/_footer.scss
@@ -1,10 +1,9 @@
 /* Footer */
 
 .go_to_top {
-    margin-top  : 50px;
     margin-left : auto;
     margin-right: auto;
-    //content: '';
+    padding-top: 50px;
     height: 0;
     width: 0;
     border-bottom: 90px solid darken(_palette(footer-bg), 8);
