--- a/_sass/theme/_footer.scss
+++ b/_sass/theme/_footer.scss
@@ -26,7 +26,8 @@
     text-align      : center;
 
     .icons {
-        font-size: 1.6em;
+        font-size  : 1.6em;
+        line-height: 2em  ;
 
         a {
             color: _palette(fg-light);
