--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -1,10 +1,11 @@
 ---
-layout: html_compress_old
+layout: html_compress
 ---
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
 <body class="is-loading">
+    <img class="background" src="img/banner.webp"">
     <div id="page-wrapper">
         {% include header.html %}
         {{ content }}
