--- a/_layouts/home_layout.html
+++ b/_layouts/home_layout.html
@@ -5,7 +5,7 @@ layout: html_compress
 <html lang="en">
 {% include head.html %}
 <body class="is-loading landing">
-    <img class="background" src="img/banner.webp"">
+    <img class="background-image" src="#">
     <div id="page-wrapper">
         {% include header.html %}
         {{ content }}
