--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -56,19 +56,19 @@ body
     }
 }
 
-.background-image
+.background
 {
     @include vendor('background-image', ('linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$imgurl}/banner.webp")'));
     background-attachment: fixed;
-    background-color: _palette(bg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: _palette(bg);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     z-index: -99999;
     @include vendor('animation', 'background_pulse 4s ease-in-out infinite alternate');
 }
