--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -5,12 +5,15 @@ layout: html_compress
 <html lang="en">
 {% include head.html %}
 <body class="is-loading">
-    <img class="background" src="">
+
+    <img class="background" src="#" alt="">
+
     <div id="page-wrapper">
         {% include header.html %}
         {{ content }}
         {% include footer.html %}
     </div>
     {% include scripts.html %}
+
 </body>
 </html>
