--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -58,7 +58,7 @@ body
 
 .background
 {
-    @include vendor('background-image', ('linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$imgurl}/banner.webp")'));
+    @include vendor('background-image', ('linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("./#{$imgurl}/banner.webp")'));
     background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
