updated contact & about pages; added facebook comments to projects;

--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -13,6 +13,10 @@ layout: html_compress_old
         {{ content }}
         {% include footer.html %}
     </div>
+
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0&appId=320390575308015"></script>
     {% include scripts.html %}
 
 </body>
