--- a/_layouts/post_content.html
+++ b/_layouts/post_content.html
@@ -52,6 +52,12 @@ layout: default_layout
             </p>
 
             {{ content }}
+
+            <div
+             class="fb-comments"
+             data-href="https://insidious-src.online/project/neuron-engine/"
+             data-width="100%"
+             data-numposts="10"></div>
         </div>
     </section>
 </article>
