added '#' to background img tag -> src property;

--- a/_layouts/home_layout.html
+++ b/_layouts/home_layout.html
@@ -6,7 +6,7 @@ layout: html_compress_old
 {% include head.html %}
 <body class="is-loading landing">
 
-    <img class="background" src="" alt="">
+    <img class="background" src="#" alt="">
 
     <div id="page-wrapper">
         {% include header.html %}
