added fontawesome to critical.scss;

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -4,6 +4,7 @@ $imgurl: '{{ site.url_dir }}img';
 @import 'vars'        ;
 @import 'functions'   ;
 @import 'mixins'      ;
+@import 'fontawesome' ;
 @import 'theme/layout';
 @import 'theme/banner';
 @import 'theme/header';
