removed banner.scss include from critical.scss;

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -6,6 +6,6 @@ $imgurl: '{{ site.url_dir }}img';
 @import 'mixins'      ;
 @import 'fontawesome' ;
 @import 'theme/layout';
-@import 'theme/banner';
+//@import 'theme/banner';
 @import 'theme/header';
 @import 'theme/menu'  ;
