banner.scss restored in critical.scss;

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -4,8 +4,8 @@ $imgurl: '{{ site.url_dir }}img';
 @import 'vars'        ;
 @import 'functions'   ;
 @import 'mixins'      ;
-@import 'fontawesome' ;
+//@import 'fontawesome' ;
 @import 'theme/layout';
-//@import 'theme/banner';
+@import 'theme/banner';
 @import 'theme/header';
 @import 'theme/menu'  ;
