--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -51,7 +51,7 @@
         $important: '!important';
     }
 
-    padding: ($tb + nth($pad, 1)) ($lr + nth($pad, 2)) max(.1em, $tb - _size(element-margin) + nth($pad, 3)) ($lr + nth($pad, 4)) #{$important};
+    padding: ($tb + nth($pad, 1)) ($lr + nth($pad, 2)) ($tb - _size(element-margin) + nth($pad, 3)) ($lr + nth($pad, 4)) #{$important};
 
 }
 
