--- a/_sass/fontawesome/_list.scss
+++ b/_sass/fontawesome/_list.scss
@@ -3,14 +3,14 @@
 
 .#{$fa-css-prefix}-ul {
   padding-left: 0;
-  margin-left: $fa-li-width + em;
+  margin-left: $fa-li-width;
   list-style-type: none;
   > li { position: relative; }
 }
 .#{$fa-css-prefix}-li {
   position: absolute;
-  left: -$fa-li-width + em;
-  width: $fa-li-width + em;
+  left: -$fa-li-width;
+  width: $fa-li-width;
   top: _divide(2, 14) + em;
   text-align: center;
   &.#{$fa-css-prefix}-lg {
