--- a/_sass/fontawesome/_list.scss
+++ b/_sass/fontawesome/_list.scss
@@ -14,6 +14,6 @@
   top: _divide(2, 14) + em;
   text-align: center;
   &.#{$fa-css-prefix}-lg {
-    left: -$fa-li-width + (_divide(4, 14) + em);
+    left: (-$fa-li-width + (_divide(4, 14) + em));
   }
 }
