--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -65,6 +65,7 @@ body
     background-size: cover;
     background-color: _palette(bg);
     position: fixed;
+    content: '';
     top: 0;
     left: 0;
     width: 100%;
