cleanup scripts.html;

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,5 +10,5 @@
 <script async src="{{ 'js/scripts.js' | prepend: site.url_dir }}"></script>
 {% endif %}
 <!--[if lte IE 8]>
-<script src="{{ "js/ie/respond.min.js' | prepend: site.url_dir }}" type="text/javascript"></script>
+<script src="{{ "js/ie/respond.min.js' | prepend: site.url_dir }}"></script>
 <![endif]-->
