--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -36,7 +36,7 @@
 
 body, input, select, textarea {
     color: _palette(fg);
-    font-family: _font(family);
+    font-family: _font(special);
     font-size: 15pt;
     font-weight: _font(weight);
     letter-spacing: _size(letter-spacing);
